--- a/src/client/src/styles/styles.scss
+++ b/src/client/src/styles/styles.scss
@@ -4,7 +4,31 @@
 
 .navbar-item {
   margin-left: 2rem;
+
+  &:hover {
+    background-color: rgb(229, 212, 237);
+  }
 }
-.img {
+.navbar-icon {
   padding-right: 6px;
+}
+
+.contact-form {
+  background: rgb(187, 189, 246);
+}
+
+@media screen and (max-width: 600px) {
+  .navbar-burger {
+    display: block;
+
+    &:span {
+      background-color: grey;
+      display: block;
+      position: relative;
+      width: 3.5rem;
+      height: .4rem;
+      margin-bottom: .7rem;
+      transition: ease-in-out 0.2s;
+    }
+  }
 }
