--- a/src/client/src/styles/styles.scss
+++ b/src/client/src/styles/styles.scss
@@ -220,3 +220,16 @@ margin-bottom: 0.8rem;
   position: relative;
   margin: 1rem;
 }
+.header {
+  display: absolute;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+}
+
+.about-container {
+  display: inline-block;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+}
