--- a/src/client/src/styles/styles.scss
+++ b/src/client/src/styles/styles.scss
@@ -32,3 +32,9 @@
     }
   }
 }
+
+.successful {
+  background-color: rgb(73, 168, 73) !important;
+  transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+  transform: scale(1.25);
+}
