--- a/src/client/src/styles/styles.scss
+++ b/src/client/src/styles/styles.scss
@@ -4,21 +4,16 @@ $ceramic: #E5D4ED;
 $tarmac: #3C3744;
 $plum: #36083F;
 
+@import url('https://fonts.googleapis.com/css?family=Amarante');
+
 .navbar {
   background-color: rgb(187, 189, 246);
-
-@import
-url('https://fonts.googleapis.com/css?family=Amarante');
+}
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
-
-body {
-  font-family: 'Amarante', cursive;
-  overflow: hidden;
 }
 
 .container {
@@ -219,7 +214,7 @@ margin-bottom: 0.8rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 450px;
+  height: 100vh;
   align-items: center;
   background: rgb(187, 189, 246);
   width: 100vw;
@@ -268,4 +263,3 @@ margin-bottom: 0.8rem;
   align-content: center;
   text-align: center;
 }
-
