--- a/src/client/src/styles/styles.css
+++ b/src/client/src/styles/styles.css
@@ -1,57 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Amarante");
-.navbar {
-  background-color: #bbbdf6;
-}
-
 * {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-.container {
-  position: relative;
-  height: 100vh;
-  width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-}
-
-.container:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.content {
-  max-width: 700px;
-  padding: 2rem;
-  position: relative;
-  z-index: 1;
-}
-
-.content h1 {
-  font-size: 4.3rem;
-  margin-bottom: 0.8rem;
-}
-
-.content p {
-  color: #fff;
-  font-size: 1.2rem;
-  font-weight: 100;
 }
 
 .button {
@@ -73,6 +25,16 @@
 }
 
 .menu-container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   position: fixed;
   top: 0;
   left: 0;
@@ -80,11 +42,20 @@
 }
 
 .toggler {
-  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  position: relative;
   top: 0.5rem;
-  left: 0.5rem;
-  width: 60px;
-  height: 60px;
+  right: 0.5rem;
+  width: 3.8rem;
+  height: 3.8rem;
   border-radius: 50%;
   opacity: 0;
   z-index: 3;
@@ -92,11 +63,10 @@
 }
 
 .hamburger {
-  position: absolute;
   top: 0.5rem;
   left: 0.5rem;
-  width: 60px;
-  height: 60px;
+  width: 4rem;
+  height: 4rem;
   border-radius: 50%;
   background-color: #b66fb3;
   display: -webkit-box;
@@ -112,7 +82,7 @@
 }
 
 .hamburger > div {
-  position: absolute;
+  position: relative;
   width: 60%;
   height: 3px;
   border-radius: 1.5px;
@@ -169,7 +139,20 @@
   opacity: 1;
 }
 
+.toggler:checked ~ .menu > div > div:checked {
+  visibility: hidden;
+}
+
 .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   position: fixed;
   top: 0;
   left: 0;
@@ -240,6 +223,7 @@
 }
 
 .contact-form {
+  font-size: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -250,6 +234,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  height: 650px;
   height: 100vh;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -293,6 +278,18 @@
   border-radius: 0.5rem;
 }
 
+.contact-header {
+  font-size: 29px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-line-pack: distribute;
+      align-content: space-around;
+  position: absolute;
+}
+
 .contact-label {
   display: block;
   position: relative;
@@ -317,9 +314,52 @@
   -ms-flex-line-pack: center;
       align-content: center;
   text-align: center;
+  height: 600px;
+}
+
+.successful {
+  background-color: #49a849 !important;
+  -webkit-transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+  transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+  -webkit-transform: scale(1.25);
+          transform: scale(1.25);
+}
+
+.footer {
+  background-color: pink;
+  display: block;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  bottom: 0rem;
+}
+
+.footer > i {
+  font-size: 25px;
 }
 
 .services-box {
   background-color: #BBBDF6;
+}
+
+.services-cards {
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.services-cards .service-card {
+  min-width: 50%;
+  text-align: center;
 }
 /*# sourceMappingURL=styles.css.map */
