--- a/src/client/src/styles/styles.scss
+++ b/src/client/src/styles/styles.scss
@@ -258,15 +258,19 @@
   transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
   transform: scale(1.25);
 }
-.footer {
-  background-color: pink;
-  display: block;
-  justify-content: center;
-  bottom: 0rem;
-}
 
-.footer > i {
-  font-size: 25px;
+.footer {
+  display: flex;
+  flex-direction: column;  
+  justify-content: center;
+  text-align: center;
+  bottom: 0rem;
+  padding: 1.5rem;
+  font-size: 1.5rem;;
+
+  i {
+    font-size: 2rem;
+  }
 }
 
 .services-box {
