--- a/src/client/src/styles/styles.scss
+++ b/src/client/src/styles/styles.scss
@@ -4,110 +4,6 @@ $ceramic: #E5D4ED;
 $tarmac: #3C3744;
 $plum: #36083F;
 
-@import url('https://fonts.googleapis.com/css?family=Amarante');
-* {
-  padding: 0;
-  margin: 0;
-  text-decoraction: none;
-  list-style: none;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Amarante', cursive;
-}
-
-nav {
-  background: #3C3744;
-  height: 5rem;
-  width: 100%;
-}
-
-label.logo {
-  color: white;
-  font-size: 30px;
-  line-height: 5rem;
-  padding: 0 100px;
-  font-weight: bold;
-}
-
-nav ul {
-  float: right;
-  margin-right: 20px;
-}
-
-nav ul li {
-  display: inline-block;
-  line-height: 5rem;
-  margin: 0 5px;
-}
-
-nav ul li a {
-  color: white;
-  font-size: 17px;
-  padding: 7px 13px;
-  border-radius: 2rem;
-  text-transform: uppercase;
-}
-
-a.active, a:hover {
-  background: #1b9bff;
-  transition: .5s;
-}
-
-.checkbtn {
-  font-size: 30px;
-  color: white;
-  float: right;
-  line-height: 5rem;
-  margin-right: 40px;
-  cursor: pointer;
-  display: none;;
-}
-
-#check {
-  display: none;
-}
-
-@media (max-width: 952px){
-  label.logo {
-    font-size: 30px;
-    padding-left: 50px;
-  }
-  nav ul li a {
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 952px){
-  .checkbtn {
-    display: block;
-  }
-  ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #2c3e50;
-    top: 80px;
-    left: -100%;
-    text-align: center;
-    transition: all .5s;
-  }
-  nav ul li {
-    display: block;
-  }
-  nav ul li a {
-    font-size: 20px;
-  }
-  a:hover, a.active {
-    background: none;
-    color: #0082e6;
-  }
-  #check:checked ~ ul {
-    left: 0;
-  }
-}
-
 .contact-form {
   font-size: 25px;
   display: flex;
@@ -116,7 +12,7 @@ a.active, a:hover {
   height: 650px;
   height: 100vh;
   align-items: center;
-  background: rgb(187, 189, 246);
+  background: white;
   width: 100vw;
 }
 
