--- a/src/client/src/styles/styles.scss
+++ b/src/client/src/styles/styles.scss
@@ -168,12 +168,6 @@ a.active, a:hover {
   height: 600px;
 }
 
-.successful {
-  background-color: rgb(73, 168, 73) !important;
-  transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-  transform: scale(1.25);
-}
-
 .footer {
   display: flex;
   flex-direction: column;
@@ -181,7 +175,7 @@ a.active, a:hover {
   text-align: center;
   bottom: 0rem;
   padding: 1.5rem;
-  font-size: 1.5rem;;
+  font-size: 1.5rem;
 
   i {
     font-size: 2rem;
