--- a/src/client/src/styles/global.scss
+++ b/src/client/src/styles/global.scss
@@ -18,7 +18,6 @@
 
 .content-wrapper {
   padding: 1rem 0;
-  border: 1px solid red;
   background: $ceramic;
 }
 
@@ -47,11 +46,9 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    border: 1px solid red;
     width: 80%;
 
     .service-card {
-      border: 1px solid red;
       min-width: 25%;
       max-width: 50%;
       text-align: center;
@@ -160,7 +157,6 @@
 .reviews {
   display: flex;
   flex-direction: column;
-  border: 1px solid red;
   justify-content: space-evenly;
   align-items: center;
 
@@ -179,4 +175,10 @@
       border-bottom: 0.25rem solid $tarmac;
     }
   }
+}
+
+.text-wrapper {
+  padding: 1rem;
+  height: 100%;
+  width: 100%;
 }
