--- a/src/client/src/styles/global.scss
+++ b/src/client/src/styles/global.scss
@@ -8,6 +8,10 @@
   box-sizing: border-box;
   font-size: 1rem;
   transition: 0.5s cubic-bezier(0.55, 0.055, 0.675, 0.19) all;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .page-wrapper {
@@ -84,13 +88,14 @@
 .service-buttons {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+  width: 100vw;
+  margin: 0 auto;
 
   button {
-    width: auto;
-    min-width: 25%;
-    padding: 1rem;
+    width: stretch;
+    padding: 0.5rem 1rem;
+    background-color: $tarmac;
+    color: $ceramic;
   }
 }
 
@@ -181,4 +186,8 @@
   padding: 1rem;
   height: 100%;
   width: 100%;
+
+  * {
+    margin-bottom: 0.5rem;
+  }
 }
