--- a/src/client/src/styles/navbar.scss
+++ b/src/client/src/styles/navbar.scss
@@ -4,38 +4,62 @@ nav {
   background: $babyblue;
   height: 5rem;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+
+  ul {
+    width: stretch;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    float: right;
+    margin-right: 20px;
+
+    li {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      width: stretch;
+      height: 100%;
+      
+      a:hover, a:active {
+        opacity: 0.5;
+        background: #1b9bff;
+        transition: 0.25s linear all;
+      }
+
+      a {
+        color: white;
+        border-radius: 2rem;
+        text-transform: uppercase;
+
+        &:active {
+          background: #1b9bff;
+        }
+      }
+    }
+  }
+
 }
 
-label.logo {
+.logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   color: #B66FB3;
-  font-size: 30px;
-  line-height: 5rem;
-  padding: 0 100px;
+  // font-size: 30px;
+  // line-height: 5rem;
+  // padding: 0 100px;
   font-weight: bold;
-}
-
-nav ul {
-  float: right;
-  margin-right: 20px;
-}
-
-nav ul li {
-  display: inline-block;
-  margin: 0 5px;
+  width: 25%;
   height: 100%;
-}
-
-nav ul li a {
-  color: white;
-  font-size: 17px;
-  padding: 7px 13px;
-  border-radius: 2rem;
-  text-transform: uppercase;
-}
-
-a.active, a:hover {
-  background: #1b9bff;
-  transition: .5s;
 }
 
 .checkbtn {
@@ -45,7 +69,7 @@ a.active, a:hover {
   line-height: 5rem;
   margin-right: 40px;
   cursor: pointer;
-  display: none;;
+  display: none;
 }
 
 #check {
@@ -64,30 +88,56 @@ a.active, a:hover {
 
 @media (max-width: 952px){
   .checkbtn {
-    display: block;
+    width: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    i {
+      font-size: 2rem;;
+    }
+  }
+
+  nav {
+    ul {
+      flex-direction: column;
+      height: stretch;
+    }
   }
   ul {
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     position: fixed;
+    // border: 1px solid red;
     width: 100%;
-    height: 100vh;
     background: rgb(60, 55, 68);
-    top: 80px;
+    top: 5rem;
     left: -100%;
     text-align: center;
-    transition: all .5s;
+
+    li {
+      height: fit-content;
+
+      a {
+        height: fit-content
+      }
+    }
   }
-  nav ul li {
-    display: block;
-    color: black;
-  }
-  nav ul li a {
-    font-size: 20px;
-  }
+  // nav ul li {
+  //   display: block;
+  //   color: black;
+  // }
+  // nav ul li a {
+  //   font-size: 20px;
+  // }
   a:hover, a.active {
     background: none;
     color: black;
   }
   #check:checked ~ ul {
-    left: 0;
+    width: 100%;
+    left: 0%;
   }
 }
