Improvements to general styling and layout, more responsive and links now cover the whole container

--- a/src/client/src/styles/global.scss
+++ b/src/client/src/styles/global.scss
@@ -175,7 +175,12 @@
     border: 0.25rem solid $tarmac;
     border-bottom: none;
     padding: 1rem;
-
+    text-align: center;
+    
+    * {
+      font-size: 1.5rem;
+    }
+    
     &:last-of-type {
       border-bottom: 0.25rem solid $tarmac;
     }
