--- a/src/client/src/styles/navbar.scss
+++ b/src/client/src/styles/navbar.scss
@@ -19,32 +19,32 @@ nav {
     float: right;
     margin-right: 20px;
 
-    li {
+    * {
+      text-decoration: none;
+    }
+
+    a {
       display: flex;
       flex-direction: column;
       justify-content: center;
       text-align: center;
       width: stretch;
       height: 100%;
-      
-      a:hover, a:active {
-        opacity: 0.5;
-        background: #1b9bff;
-        transition: 0.25s linear all;
-      }
-
-      a {
+      li {
         color: white;
-        border-radius: 2rem;
+        border-radius: 1rem;
         text-transform: uppercase;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
-        &:active {
+        &:active, &:hover {
           background: #1b9bff;
         }
       }
     }
   }
-
 }
 
 .logo {
@@ -54,12 +54,12 @@ nav {
   align-items: center;
   text-align: center;
   color: #B66FB3;
-  // font-size: 30px;
-  // line-height: 5rem;
-  // padding: 0 100px;
-  font-weight: bold;
   width: 25%;
   height: 100%;
+
+  label {
+    font-size: 2rem;
+  }
 }
 
 .checkbtn {
@@ -110,28 +110,20 @@ nav {
     justify-content: space-evenly;
     align-items: center;
     position: fixed;
-    // border: 1px solid red;
     width: 100%;
     background: rgb(60, 55, 68);
     top: 5rem;
     left: -100%;
     text-align: center;
 
-    li {
-      height: fit-content;
+    // li {
+    //   height: fill;
 
-      a {
-        height: fit-content
-      }
-    }
+    //   a {
+    //     height: stretch;
+    //   }
+    // }
   }
-  // nav ul li {
-  //   display: block;
-  //   color: black;
-  // }
-  // nav ul li a {
-  //   font-size: 20px;
-  // }
   a:hover, a.active {
     background: none;
     color: black;
