--- a/src/client/src/styles/navbar.scss
+++ b/src/client/src/styles/navbar.scss
@@ -85,47 +85,47 @@ nav {
 // }
 
 @media (max-width: 952px){
-  .checkbtn {
+
+  nav {
+
+    .checkbtn {
     width: 10%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
-    i {
-      font-size: 2rem;;
+      
+      i {
+        font-size: 2rem;;
+      }
     }
-  }
 
-  nav {
+    .logo {
+      width: 100%;
+      transform: translateX(-5%);
+    }
 
-  ul {
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    position: fixed;
-    width: 100%;
-    height: 80%;
-    background: rgb(60, 55, 68);
-    top: 5rem;
-    left: -100%;
-    text-align: center;
+    ul {
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      position: fixed;
+      width: 90%;
+      height: 89%;
+      background: rgb(60, 55, 68);
+      top: 5rem;
+      left: -100%;
+      text-align: center;
+    }
 
-    // li {
-    //   height: fill;
+    a:hover, a.active {
+      background: none;
+      color: black;
+    }
 
-    //   a {
-    //     height: stretch;
-    //   }
-    // }
-  }
-  a:hover, a.active {
-    background: none;
-    color: black;
-  }
-  #check:checked ~ ul {
-    width: 100%;
-    left: 0%;
-  }
+    #check:checked ~ ul {
+      width: 100%;
+      left: 0%;
+    }
   }
 }
