--- a/src/client/src/styles/global.scss
+++ b/src/client/src/styles/global.scss
@@ -21,7 +21,7 @@
 }
 
 .content-wrapper {
-  padding: 1rem 0;
+  min-height: 74vh;
   background: $ceramic;
 }
 
@@ -31,12 +31,13 @@
   justify-content: space-evenly;
   align-items: center;
   height: 5rem;
-  background: $babyblue;
+  background: rgba($color: $babyblue, $alpha: 1.0);
+  // DALE: Commented out styling for footer as i believe a more 'minimal' approach fits nicer.
 
   p {
-    background: rgb(60, 55, 68);
-    border-radius: 0.5rem;
-    color: $ceramic;
+    // background: rgb(60, 55, 68);
+    // border-radius: 0.5rem;
+    // color: $ceramic;
     padding: 1rem;
   }
 }
@@ -281,6 +282,7 @@
 
 .text-wrapper {
   padding: 1rem;
+  margin-bottom: 1rem;
   height: 100%;
   width: 100%;
 
