--- a/src/client/src/styles/home.scss
+++ b/src/client/src/styles/home.scss
@@ -1,14 +1,16 @@
 @import './colours.scss';
 
-$background-opacity: 0.25;
 
-
+// Formatting for Homepage-Background-Image + Content
 .bg-image {
-    background-image: url(../assets/pesky_pooch_home_background.jpg);
+    background-image: url(../assets/home_bg.jpg);
     background-attachment: fixed;
-    background-size: cover;
+    background-size: cover !important;
+    background-position: 10%;
     overflow: hidden;
-    height: 80vh;
+    height: 74vh;
+    min-width: 100%;
+    min-height: 100%;
 
     &:after {
         content: '';
@@ -18,7 +20,25 @@ $background-opacity: 0.25;
         right: 0;
         width: 100%;
         height: 100%;
-        z-index: -1;
-        background: rgba(#444, 0);
+        z-index: -100;
+        background: rgba(#444, 0.2);
     }
+}
+
+
+.home-hero-text-box {
+// Secondary header
+margin-top: 3rem;
+color: #fff;
+line-height: 1.5;
+
+    h1, .secondary-text {
+        font-size: 5rem;
+        font-weight: 400;
+        }
+        .secondary-text { color: $primary_purple; }
+
+        h3 {
+            font-weight: 800;
+        }
 }
