Finished styling the footer

--- a/src/client/src/styles/home.scss
+++ b/src/client/src/styles/home.scss
@@ -30,7 +30,7 @@
 // Secondary header
 margin-top: 3rem;
 color: #fff;
-line-height: 1.5;
+line-height: 5rem;
 
     h1, .secondary-text {
         font-size: 5rem;
