--- a/src/client/src/styles/global.scss
+++ b/src/client/src/styles/global.scss
@@ -27,18 +27,20 @@
 
 .footer {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
+  padding: 1rem;
   height: 5rem;
+  bottom: 0;
   background: rgba($color: $babyblue, $alpha: 1.0);
-  // DALE: Commented out styling for footer as i believe a more 'minimal' approach fits nicer.
 
-  p {
-    // background: rgb(60, 55, 68);
-    // border-radius: 0.5rem;
-    // color: $ceramic;
-    padding: 1rem;
+  &.admin-login-link {
+    align-self: flex-start;
+  }
+
+  &.social-icons {
+    align-self: flex-end;
   }
 }
 
