--- a/src/client/src/styles/global.scss
+++ b/src/client/src/styles/global.scss
@@ -28,14 +28,14 @@
 .footer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 1rem;
   height: 5rem;
   bottom: 0;
   background: rgba($color: $babyblue, $alpha: 1.0);
 
-  &.admin-login-link {
+  &.admin-login {
     align-self: flex-start;
   }
 
@@ -120,6 +120,7 @@
 .page-title {
   font-size: 2rem;
   text-align: center;
+  padding-top: 1.75rem;
   margin-bottom: 2rem;
   color: rgb(255, 255, 255);
 }
@@ -284,7 +285,6 @@
 
 .text-wrapper {
   padding: 1rem;
-  margin-bottom: 1rem;
   height: 100%;
   width: 100%;
 
@@ -293,30 +293,4 @@
   }
 }
 
-@media only screen and (max-width: 952px) {
-  .form-container {
-    .login-form {
-      width: 100%;
-
-      fieldset {
-        width: 100%;
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-        padding: 1rem;
-
-        label {
-          width: stretch;
-          font-size: 1.5rem;
-          margin-bottom: 1rem;
-        }
-
-        input {
-          width: stretch;
-          padding: 0.5rem 0;
-        }
-      }
-    }
-  }
-  
-}
+@import './mobile.scss';
