--- a/src/client/src/styles/global.scss
+++ b/src/client/src/styles/global.scss
@@ -43,6 +43,23 @@
   &.social-icons {
     align-self: flex-end;
   }
+
+   a {
+      color: white;
+      border-radius: 1rem;
+      text-transform: uppercase;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      font-weight:  bold;
+
+      &:active, &:hover {
+        // background: #1b9cff67;
+        background: rgba(60, 55, 68, 0.438);;
+        transition: 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) all;
+      }
+  }
 }
 
 .services-container {
