--- a/src/client/src/styles/global.scss
+++ b/src/client/src/styles/global.scss
@@ -159,7 +159,7 @@
 .service-buttons {
   display: flex;
   flex-direction: row;
-  width: 100vw;
+  width: 100%;
   margin: 0 auto;
 
   button {
@@ -221,7 +221,7 @@
   }
 
   .contact-form {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
