--- a/src/client/src/styles/services.scss
+++ b/src/client/src/styles/services.scss
@@ -4,7 +4,7 @@
   background-color: $babyblue;
 
   .services-cards {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -44,4 +44,21 @@
 .thumbnail {
   height: 20vh;
   width: auto;
+}
+
+.admin-dash {
+  border: 1px solid red;
+  width: 90vw;
+  margin: 1rem auto;
+  background-color: $plum;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  color: rgb(255, 255, 255);
+  text-align: center;
+
+  h2 {
+    margin-bottom: 1rem;
+  }
 }
