--- a/src/client/src/styles/services.scss
+++ b/src/client/src/styles/services.scss
@@ -1,53 +1,71 @@
 @import './colours.scss';
 
-.services-box {
-  background-color: $babyblue;
+// .services-box {
+//   background-color: $babyblue;
+//   .services-cards {
+//     width: 100%;
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+//     justify-content: space-evenly;
 
-  .services-cards {
-    width: 100%;
+//     .service-card {
+//       width: 25%;
+//       text-align: center;
+//     }
+//   }
+// }
+
+#events-title {
+  color: white;
+  width: 100%;
+  text-align: center;
+  font-size: 1.25rem;
+  margin-bottom: 1rem;
+}
+
+
+.events-container {
+  background: $otherblue;
+  border-top: 0.5rem solid $ceramic;
+  padding: 1rem;
+
+  .events {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
 
-    .service-card {
-      min-width: 50%;
+    .event-card {
       text-align: center;
+      padding: 0.5rem;
+      background: $babyblue;
+      border: 0.25rem solid $otherblue;
+      border-radius: 0.5rem;
+      width: 25%;
+
+      * {
+        padding: 1rem;
+        border-bottom: 0.25rem solid $otherblue;
+      }
+
+      .event-desc {
+        font-size: 1rem
+      }
+
+      .event-loc {
+        font-size: 2rem;
+      }
     }
   }
 }
-
-.events {
-  margin-top: 1rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-
-  h2 {
-    width: 100%;
-    padding: 1rem;
-    background-color: $plum;
-    color: $ceramic;
-    text-align: center;
-    margin-bottom: 1rem;
-  }
-
-  .event-card {
-    max-width: 50%;
-    min-width: 25%;
-    height: fit-content;
-  }
-}
-
 .thumbnail {
   height: 20vh;
   width: auto;
 }
 
 .admin-dash {
-  border: 1px solid red;
   width: 90vw;
   margin: 1rem auto;
   background-color: $plum;
@@ -60,5 +78,52 @@
 
   h2 {
     margin-bottom: 1rem;
+  }
+}
+
+.services-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: $otherblue;
+  padding: 1rem;
+
+  * {
+    font-size: 1.25rem;
+  }
+
+  .services {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 80%;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    background-color: $otherblue;
+
+    .service-card {
+      width: 25%;
+      text-align: center;
+      padding: 0.5rem;
+      background: $babyblue;
+      border: 0.25rem solid $otherblue;
+      border-radius: 0.5rem;
+
+      * {
+        padding: 1rem;
+        border-bottom: 0.25rem solid $otherblue;
+      }
+
+      .service-desc {
+        font-size: 1rem
+      }
+
+      .service-cost {
+        font-size: 2rem;
+      }
+    }
   }
 }
