Contact page and services page more responsive now

--- a/src/client/src/styles/navbar.scss
+++ b/src/client/src/styles/navbar.scss
@@ -9,6 +9,7 @@ nav {
   justify-content: space-between;
   position: sticky;
   top: 0;
+  border-bottom: 0.25rem solid rgba(60, 55, 68, 0.301);
 
   ul {
     width: stretch;
