--- a/src/client/src/styles/services.scss
+++ b/src/client/src/styles/services.scss
@@ -1,21 +1,5 @@
 @import './colours.scss';
 
-// .services-box {
-//   background-color: $babyblue;
-//   .services-cards {
-//     width: 100%;
-//     display: flex;
-//     flex-direction: row;
-//     flex-wrap: wrap;
-//     justify-content: space-evenly;
-
-//     .service-card {
-//       width: 25%;
-//       text-align: center;
-//     }
-//   }
-// }
-
 #events-title {
   color: white;
   width: 100%;
@@ -43,7 +27,7 @@
       background: $babyblue;
       border: 0.25rem solid $otherblue;
       border-radius: 0.5rem;
-      width: 25%;
+      width: 50%;
 
       * {
         padding: 1rem;
@@ -61,8 +45,8 @@
   }
 }
 .thumbnail {
-  height: 20vh;
-  width: auto;
+  width: 100%;
+  height: auto;
 }
 
 .admin-dash {
@@ -105,7 +89,7 @@
     background-color: $otherblue;
 
     .service-card {
-      width: 25%;
+      width: 50%;
       text-align: center;
       padding: 0.5rem;
       background: $babyblue;
