--- a/src/client/src/styles/global.scss
+++ b/src/client/src/styles/global.scss
@@ -104,7 +104,7 @@
   justify-content: center;
   align-items: center;
   background-color: $babyblue;
-  padding: 1rem;
+  padding: 0.25rem;
 
   button {
     padding: 1rem;
@@ -148,7 +148,7 @@
   }
 
   .contact-form {
-    width: 100%;
+    width: 80vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -158,17 +158,16 @@
       padding: 1rem;
       margin: 0.25rem;
       border-radius: 0.5rem;
-      background: $plum;
+      background: $otherblue;
       color: rgb(255, 255, 255);
       border: none;
     }
 
     fieldset {
-      width: 75%;
+      width: 100%;
       margin: auto;
       display: flex;
       flex-direction: column;
-      padding: 1rem;
       border: none;
 
       * {
@@ -179,7 +178,8 @@
       }
 
       label {
-        width: 50%;
+        width: fit-content;
+        margin-top: 0.5rem;
         font-size: 1.5rem;
         margin-bottom: 1rem;
         background: $plum;
@@ -188,12 +188,12 @@
       }
 
       input {
-        width: 80%;
+        width: 100%;
         padding: 0.5rem 0;
       }
 
       textarea {
-        width: 80%;
+        width: 100%;
         height: 25vh;
         resize: none;
         font-family: Arial, Helvetica, sans-serif;
