Styled services page control panel forms for creation

--- a/src/client/src/styles/eventcontrolpanel.scss
+++ b/src/client/src/styles/eventcontrolpanel.scss
@@ -19,29 +19,29 @@ $plum: #36083F;
   }
 }
 
-#form-container {
-  display: flex !important;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
+// #form-container {
+//   display: flex !important;
+//   flex-direction: row;
+//   justify-content: center;
+//   width: 100%;
 
-  form {
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    label {
-      width: 25%;
-    }
+//   form {
+//     margin-top: 1rem;
+//     display: flex;
+//     flex-direction: column;
+//     label {
+//       width: 25%;
+//     }
 
-    input {
-      width: 50%;
-    }
+//     input {
+//       width: 50%;
+//     }
 
-    textarea {
-      width: 50%;
-    }
-  }
-}
+//     textarea {
+//       width: 50%;
+//     }
+//   }
+// }
 
 .admin-banner {
   margin-bottom: 1rem;
