--- a/src/client/src/styles/services.scss
+++ b/src/client/src/styles/services.scss
@@ -111,3 +111,37 @@
     }
   }
 }
+
+#event-form, #service-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  button {
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+    margin: 0.5rem 0;
+    background-color: $otherblue;
+    color: white;
+    border: none;
+  }
+
+  .form-group {
+    display: flex;
+    flex-direction: column;
+    margin: 0.25rem 0;
+    border: 0.25rem solid $ceramic;
+    border-radius: 0.25rem;
+    padding: 0.25rem;
+
+    textarea {
+      resize: none;
+    }
+  }
+
+  input[type=file] {
+    background-color: $ceramic;
+    padding: 0.25rem;
+    color: black;
+  }
+}
